fixed a bunch of nitpicky things, like: - the really large image of me - the bleeding text - placeholders

--- a/css/main.css
+++ b/css/main.css
@@ -156,7 +156,7 @@ img#portrait-sil{
 }
 
 div.info {
-  display: inline-block;
+  display: relative;
   padding: 30px;
   margin: 20px;
   float: right;
@@ -173,7 +173,7 @@ div.info {
 }
 
 .info > h2 {
-  display: inline-block;
+  display: relative;
   font-size: 2em;
   float: right;
 
